# knowledge-engine-core

./: .ci-trigger  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  m9-footer-fix.patch  pyproject.toml  pytest-failure.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
docs/: .audit-remediation-note  .m14_preparation_complete  architect_review.md  architecture.md  audit_remediation_register.md  codex_error_log.md  codex_fixes.md  corpus_pdf_backup.md  daily_repo_status.md  decisions.md  demo_corpus_design.md  error_log.md  error_resolution_ledger.md  founding_vision.md  future_ideas.md  glossary.md  glp1_vertical_slice_demo_checklist.md  google_drive_adapter_contract.md  google_drive_backup_pilot.md  google_drive_project_boundary.md  m10_duplicate_detection_resumability_plan.md  m10_operational_contract.md  m10_release_notes.md  m10_schema_contract.md  m11_metadata_enrichment.md  m12_100_paper_rehearsal.md  m12_operator_worksheet.md  m12_real_rehearsal_report.md  m13_progress.md  m13_scale_readiness.md  m13_scale_readiness_decision.md  m14_500_paper_rehearsal_report.md  m14_candidate_review_worksheet.md  m14_controlled_rehearsal_runbook.md  m14_corpus_readiness.md  m14_manifest_curation_draft.md  m14_mass_pubmed_candidate_discovery.md  m14_pdf_calibration_pilot.md  m14_pmc_oa_acquisition.md  m14_pubmed_pmc_candidate_discovery.md  (+39 more)
knowledge_engine/: __init__.py  candidate_review.py  candidate_review_cli.py  cli.py  config.py  corpus_library.py  corpus_pdf_backup.py  corpus_readiness.py  corpus_readiness_cli.py  crossref.py  crossref_http.py  crossref_provider.py  database.py  drive_adapter.py  drive_backup_pilot.py  drive_boundary.py  duplicate_queries.py  duplicate_resolution.py  duplicates.py  entrypoint.py  google_drive_http.py  google_drive_service_account.py  manifest_curation.py  manifest_curation_cli.py  metadata_enrichment.py  metadata_preview.py  models.py  ncbi_http.py  paper_pages_backfill.py  paper_persistence.py  parser.py  pdf_calibration.py  pdf_calibration_cli.py  persistence_errors.py  pmc_acquisition.py  pubmed_batch_discovery.py  pubmed_discovery.py  reviewed_approval.py  reviewed_approval_cli.py  scale_readiness.py  (+5 more)
scripts/: m14_pubmed_batch_discover.py
tests/: corpus_fixtures.py  test_candidate_review.py  test_candidate_review_cli.py  test_cli.py  test_cli_import_modes.py  test_cli_linked_import_options.py  test_cli_m10_reporting.py  test_corpus_import.py  test_corpus_library.py  test_corpus_library_cli.py  test_corpus_manifest.py  test_corpus_pdf_backup.py  test_corpus_readiness.py  test_corpus_readiness_atomic_report.py  test_corpus_readiness_cli.py  test_corpus_readiness_license.py  test_corpus_readiness_pdf_signature.py  test_corpus_run_report_cli.py  test_crossref.py  test_crossref_http.py  test_crossref_provider.py  test_database_search.py  test_drive_adapter.py  test_drive_backup_pilot.py  test_drive_boundary.py  test_duplicate_ingestion.py  test_duplicate_queries.py  test_duplicate_resolution.py  test_duplicates.py  test_embedding_generate_cli.py  test_extraction_claims.py  test_extraction_direction.py  test_extraction_evidence_items.py  test_extraction_pico.py  test_extraction_review_generate_cli.py  test_extraction_review_promote_cli.py  (+45 more)
(+88 files in other folders)
