[tool.poetry]
name = "knowledge-engine-core"
version = "0.2.0a1"
description = "Offline scientific paper ingestion, storage, and search for the Knowledge Engine project."
authors = ["Knowledge Engine Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "knowledge_engine" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
pymupdf = "^1.24.7"
rich = "^13.7.1"
sqlalchemy = "^2.0.31"
typer = "^0.12.3"
click = ">=8.0,<8.2"
cryptography = "^49.0.0"
faiss-cpu = "^1.14.3"
sentence-transformers = "^5.6.1"
# pytorch-cpu publishes no macOS wheels; macOS resolves torch from the
# default index instead, which already ships CPU/Metal-only wheels there.
torch = [
    { version = "^2.13.0", source = "pytorch-cpu", markers = "sys_platform != 'darwin'" },
    { version = "^2.13.0", markers = "sys_platform == 'darwin'" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
pytest = "^9.1.1"
ruff = "0.15.20"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
ke = "knowledge_engine.entrypoint:app"
ke-drive-backup-pilot = "knowledge_engine.drive_backup_pilot:main"
ke-corpus-pdf-backup = "knowledge_engine.corpus_pdf_backup:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fitz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
